<resources>
    <string name="app_name">cnBeta 新闻</string>
    <string name="content_desc">%1$s&#160;&#160;%2$s&#160;&#160;%3$s次阅读&#160;&#160;%4$s次推荐&#160;&#160;%5$s条评论</string>
    <string name="past_seconds">%d秒前</string>
    <string name="past_minutes">%d分钟前</string>
    <string name="past_hours">%d小时前</string>
    <string name="past_days">%d天前</string>
    <string name="title_settings">设置</string>
    <string name="settings_font">正文字号</string>
    <string name="settings_favor">收藏</string>
    <string name="settings_clean_cache">清除缓存</string>
    <string name="settings_about">关于</string>
    <string name="favor_toast">已收藏</string>
    <string name="favor_toast_cancel">已取消收藏</string>
    <string name="favor_delete">删除</string>
    <string name="favor_clean">清空</string>
    <string name="favor_clean_confirm_dialog">清空收藏?</string>
    <string name="favor_time_prefix">收藏于&#160;</string>
    <string name="clean_cache_success">缓存清理成功</string>
    <string name="about_content">cnBeta 1.0</string>
    <string name="about_author">&#169;Taolin</string>
    <string name="about_email">taolin2107@163.com</string>
    <string name="loading">加载中&#8230;</string>
    <string name="content_menu">更多</string>
    <string name="press_back_again_to_exit">再按一次退出</string>

    <string name="sharing_wechat_friend">微信好友</string>
    <string name="sharing_wechat_moment">朋友圈</string>
    <string name="sharing_qq">QQ</string>
    <string name="sharing_favor">收藏</string>
    <string name="sharing_favor_cancel">取消收藏</string>
</resources>
