<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="7dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/about_content"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="7dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/about_author"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="7dp"
        android:layout_marginTop="8dp"
        android:autoLink="web|email"
        android:linksClickable="true"
        android:textColorLink="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/about_email"/>
</LinearLayout>