<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/content_padding"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/wechat_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_share_favor"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#555555"
            android:text="@string/sharing_wechat_friend"/>

        <TextView
            android:id="@+id/wechat_moment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_share_favor"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#555555"
            android:text="@string/sharing_wechat_moment"/>

        <TextView
            android:id="@+id/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_share_favor"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#555555"
            android:text="@string/sharing_qq"/>

        <TextView
            android:id="@+id/favor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_share_favor"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#555555"
            android:text="@string/sharing_favor"/>
    </LinearLayout>
</HorizontalScrollView>